CCD-7242 Moved harness to support-tools module. Add test. Review code